Fixed overflowing image on project page template

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -182,7 +182,9 @@ a:visited {
     .logo {
         font-size: 100%;
     }
+    
 }
+
 
 .card {
     display: flex;
@@ -318,6 +320,11 @@ h1 > strong::after {
     margin-top: 15px;
     margin-bottom: -5px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.project-banner img{
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .text-input {
